[package]
name = "card-cli"
version = "1.13.12"
authors = ["Hatter Jiang <jht5945@gmail.com>"]
edition = "2018"

description = "FIDO(U2F, WebAuthn), YubiKey, OpenPGP command line tool"
license = "MIT OR Apache-2.0"
repository = "https://git.hatter.ink/hatter/card-cli"

[features]
default = ["with-sequoia-openpgp"]
with-sequoia-openpgp = ["sequoia-openpgp", "openpgp-card-sequoia"]

[dependencies]
authenticator = "0.3"
clap = "2.0"
rust_util = { version = "0.6", features = ["use_clap"] }
digest = "0.10"
sha1 = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
openpgp-card = "0.3"
openpgp-card-pcsc = "0.3"
openpgp-card-sequoia = { version = "0.1", optional = true }
sequoia-openpgp = { version = "1.0", optional = true }
chrono = "0.4"
simpledateformat = "0.1"
ring = "0.17"
openssl = "0.10"
pem = "3.0"
yubikey = { version = "0.8", features = ["untested"] }
yubico_manager = "0.9"
x509 = "0.2"
x509-parser = { version = "0.15", features = ["verify"] }
ssh-agent = { version = "0.2", features = ["agent"] }
p256 = { version = "0.13", features = ["pem", "ecdh", "ecdsa", "jwk"] }
p384 = { version = "0.13", features = ["pem", "ecdh", "ecdsa", "jwk"] }
p521 = { version = "0.13", features = ["pem", "ecdh", "ecdsa", "jwk"] }
spki = { version = "0.7", features = ["pem"] }
tabled = "0.14"
env_logger = "0.10"
bech32 = "0.9"
ecdsa = { version = "0.16", features = ["verifying", "spki", "pem", "der"] }
jwt = "0.16"
reqwest = { version = "0.11", features = ["blocking"] }
pinentry = "0.5"
rpassword = "7.3"
secrecy = "0.8"
der-parser = "9.0"
sshcerts = "0.13"
regex = "1.4.6"
aes-gcm-stream = "0.2"
swift-secure-enclave-tool-rs = "1.0"
u2f-hatter-fork = "0.2"
security-framework = { version = "3.0", features = ["OSX_10_15"] }
rsa = "0.9.8"
which = "7.0.3"
percent-encoding = "2.3.1"
external-command-rs = "0.1.1"
ssh-agent-lib = { version =  "0.5.1" }
ssh-key = { version = "0.6", features = ["ecdsa", "alloc"] }
tokio = "1.45.1"
ssh-encoding = { version = "0.2.0", features = ["alloc"] }
#lazy_static = "1.4.0"
#ctap-hid-fido2 = "2.1.3"
